fix(server): fix recruitment bug
