# docs/swagger.json
@@ -847,7 +847,7 @@
             }
         },
         "/recruitments/{rid}/file/{group}/{type}": {
-            "put": {
+            "get": {
                 "description": "upload recruitment file, such as written test.",
                 "consumes": [
                     "application/json"
@@ -858,8 +858,8 @@
                 "tags": [
                     "recruitment"
                 ],
-                "summary": "upload recruitment file, such as written test.",
-                "operationId": "upload_recruitment_file",
+                "summary": "download recruitment file, such as written test.",
+                "operationId": "download_recruitment_file",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -874,10 +874,8 @@
                         }
                     }
                 }
-            }
-        },
-        "/recruitments/{rid}/file/{type}/{group}": {
-            "get": {
+            },
+            "put": {
                 "description": "upload recruitment file, such as written test.",
                 "consumes": [
                     "application/json"
@@ -888,8 +886,8 @@
                 "tags": [
                     "recruitment"
                 ],
-                "summary": "download recruitment file, such as written test.",
-                "operationId": "download_recruitment_file",
+                "summary": "upload recruitment file, such as written test.",
+                "operationId": "upload_recruitment_file",
                 "responses": {
                     "200": {
                         "description": "OK",
